Blockchain tab and new portfolios added.

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
                 <li data-filter=".web">Web Development</li>
                 <li data-filter=".ai">Artificial Intelligence</li>
                 <li data-filter=".asp_net">ASP.NET</li>
+                <li data-filter=".blockchain">Blockchain</li>
               </ul>
             </div>
           </div>
@@ -491,7 +492,7 @@
                 alt=""
               />
               <div class="portfolio__area-two-item-content">
-                <span>BEST WINDOWS & DOORS</span>
+                <span>Best windows & doors</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link11" target="_blank">To CARBONNEAU'S</a></h4>
               </div>
             </div>
@@ -508,6 +509,66 @@
               <div class="portfolio__area-two-item-content">
                 <span>Pass Your Limits With</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link12" target="_blank">Redline</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item blockchain mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-19.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>Global Mentor Exchange</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link13" target="_blank">Membership Portal</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item blockchain mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-20.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>Buy/Sell Bitcoins</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link14" target="_blank">Coinbaazar</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item blockchain mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-21.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>Escrow Service!</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link15" target="_blank">CSCROW</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item blockchain mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-22.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>AI NFT Marketplace</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link16" target="_blank">MBD Boulevard</a></h4>
               </div>
             </div>
           </div>
