--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
                 <li data-filter=".ai">Artificial Intelligence</li>
                 <li data-filter=".asp_net">ASP.NET</li>
                 <li data-filter=".blockchain">Blockchain</li>
+                <li data-filter=".cms">Wordpress</li>
               </ul>
             </div>
           </div>
@@ -569,6 +570,36 @@
               <div class="portfolio__area-two-item-content">
                 <span>AI NFT Marketplace</span>
                 <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link16" target="_blank">MBD Boulevard</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item cms mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-23.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>ELITE Lifestyle</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link17" target="_blank">Management</a></h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-xl-4 col-lg-4 col-md-6 portfolio-item cms mb-30"
+          >
+            <div class="portfolio__area-two-item">
+              <img
+                class="img__full"
+                src="assets/img/portfolio/portfolio-24.png"
+                alt=""
+              />
+              <div class="portfolio__area-two-item-content">
+                <span>Advanced Holiday</span>
+                <h4><a href="portfolio-details-2.html" id="portfolio__area-two-item-content_link18" target="_blank">Lighting Service</a></h4>
               </div>
             </div>
           </div>
