--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
               <div class="skill__area-two-right-skill">
                 <div class="skill__area-two-right-skill-item">
                   <div class="skill__area-two-right-skill-item-content">
-                    <h6>Python / AI</h6>
+                    <h6>Python / Ruby / RoR / AI</h6>
                     <span class="skill__area-two-right-skill-item-count">
-                      <span class="counter">91</span>%</span
+                      <span class="counter">98</span>%</span
                     >
                   </div>
                   <div class="skill__area-two-right-skill-item-inner">
                     <div
                       class="skill__area-two-right-skill-item-bar"
-                      data-width="91"
+                      data-width="98"
                     ></div>
                   </div>
                 </div>
